google.maps init

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <base href="/" />
-    <title>Barco App</title>
+    <title>ETL App</title>
     <!-- add icon link -->
     <link rel = "icon" href="/src/assets/image.png" type="image/x-icon"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
